# nano-script

./: CMakeLists.txt  LanguageRef.md  README.md  assembler.cpp  assembler.h  ccml.cpp  ccml.h  driver.cpp  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h  vm.cpp  vm.h
examples/: alphabet.ccml  call.ccml  circle.ccml  circle2.ccml  constants.ccml  draw.ccml  game_of_life.ccml  global.ccml  global2.ccml  gradient.ccml  line.ccml  lines.ccml  maze.ccml  myarray3.ccml  plot.ccml  rcircle.ccml  return_arg.ccml  serpinski.ccml  serpinski_plot.ccml  shuffle.ccml  snake.ccml  starfield.ccml  strings.ccml  test.ccml  uppercase.ccml  weak.ccml
examples/ide/: CMakeLists.txt  main.cpp
examples/ide/imgui/: TextEditor.cpp  TextEditor.h
examples/misc/: bounce.ccml  dots.ccml  factoral.ccml  game_of_life.ccml  gcd.ccml  line.ccml  lines.ccml  mandelbrot.ccml  maze.ccml  pi.ccml  shuffle.ccml  starfield.ccml  unwind.ccml
examples/snake/: snake.ccml
regression/: reg1.ccml  reg2.ccml  reg3.ccml
source/: assembler.cpp  assembler.h  ccml.cpp  ccml.h  driver.cpp  lexer.cpp  lexer.h  nanoscript.h  parser.cpp  parser.h  token.h  vm.cpp  vm.h
source/comp/: driver.cpp
source/driver/: driver.cpp
source/driver_sdl/: driver.cpp
source/fuzz/: fuzz.py  main.cpp
source/fuzz/tests/: _test1710.txt  test0.txt  test1.txt  test10.txt  test100.txt  test1000.txt  test1001.txt  test1002.txt  test1003.txt  test1004.txt  test1005.txt  test1006.txt  test1007.txt  test1008.txt  test1009.txt  test101.txt  test1010.txt  test1011.txt  test1012.txt  test1013.txt  test1014.txt  test1015.txt  test1016.txt  test1017.txt  test1018.txt  test1019.txt  test102.txt  test1020.txt  test1021.txt  test1022.txt  test1023.txt  test1025.txt  test1026.txt  test1027.txt  test1028.txt  test1029.txt  test103.txt  test1030.txt  test1031.txt  test1033.txt  (+1857 more)
source/lib/: assembler.cpp  assembler.h  ast.cpp  ast.h  builtin.cpp  ccml.cpp  ccml.h  codegen.cpp  codegen.h  common.h  disassembler.cpp  disassembler.h  errors.cpp  errors.h  instructions.cpp  instructions.h  lexer.cpp  lexer.h  optimize.cpp  optimize.h  parser.cpp  parser.h  peephole.cpp  phases.h  pre_codegen.cpp  program.cpp  program.h  sema.cpp  sema.h  source.cpp  source.h  thread_error.h  token.cpp  token.h  types.h  value.cpp  value.h  vm.cpp  vm.h  vm_gc.cpp  (+1 more)
source/lib_builtins/: builtin.cpp  builtin.h
source/lib_common/: common.h  instructions.cpp  instructions.h  program.cpp  program.h  source.cpp  source.h  types.h
source/lib_compiler/: ast.cpp  ast.h  ccml.cpp  ccml.h  codegen.cpp  codegen.h  disassembler.cpp  disassembler.h  errors.cpp  errors.h  lexer.cpp  lexer.h  nano.cpp  nano.h  optimize.cpp  parser.cpp  parser.h  phases.h  pre_codegen.cpp  program.cpp  program_builder.cpp  program_builder.h  sema.cpp  token.cpp  token.h
source/lib_vm/: thread.cpp  thread.h  thread_error.cpp  thread_error.h  value.cpp  value.h  vm.cpp  vm.h  vm_gc.cpp  vm_gc.h
source/tests/: debug.cpp  prime.cpp  sort.cpp  tests.cpp  xfail.cpp
tests/: array001.ccml  array002.ccml  array003.ccml  array004.ccml  array2.ccml  array6.ccml  builtin.ccml  compound1.ccml  const001.ccml  const002.ccml  const003.ccml  const004.ccml  day_of_the_week.ccml  eol001.ccml  fib9.ccml  for4.ccml  fuzz.py  gc_error1.ccml  gcd.ccml  global001.ccml  global002.ccml  global2.ccml  helloworld.ccml  multidecls.ccml  none001.ccml  none1.ccml  permute.ccml  prime.ccml  rand.ccml  return1.ccml  run.bat  run.py  run_fast.bat  sort.ccml  sort2.ccml  sort3.ccml  sqrt.ccml  string001.ccml  string002.ccml  string003.ccml  (+5 more)
tests/fuzz/: test1.ccml  test100.ccml  test1003.ccml  test1006.ccml  test1007.ccml  test1008.ccml  test1009.ccml  test1011.ccml  test1013.ccml  test1017.ccml  test1018.ccml  test102.ccml  test1020.ccml  test1021.ccml  test103.ccml  test105.ccml  test107.ccml  test111.ccml  test112.ccml  test114.ccml  test120.ccml  test122.ccml  test129.ccml  test130.ccml  test131.ccml  test132.ccml  test134.ccml  test137.ccml  test138.ccml  test14.ccml  test141.ccml  test143.ccml  test144.ccml  test145.ccml  test149.ccml  test151.ccml  test153.ccml  test155.ccml  test156.ccml  test157.ccml  (+437 more)
tests/integration/: CMakeLists.txt  main.cpp
tests/regression/: bad_bool_1.ccml  bad_bool_2.ccml  bad_bool_3.ccml  bad_builtin.ccml
tests/xfail/: args1.ccml  args2.ccml  args3.ccml  array_init_1.ccml  arraypass1.ccml  arrays1.ccml  arrays10.ccml  arrays11.ccml  arrays2.ccml  arrays3.ccml  arrays4.ccml  arrays5.ccml  arrays6.ccml  arrays7.ccml  arrays8.ccml  arrays9.ccml  bad_import.ccml  builtin1.ccml  comp_array.ccml  compound1.ccml  compound2.ccml  compound3.ccml  compound4.ccml  compound5.ccml  const1.ccml  const10.ccml  const11.ccml  const12.ccml  const13.ccml  const2.ccml  const3.ccml  const4.ccml  const5.ccml  const6.ccml  const7.ccml  const8.ccml  const9.ccml  const_array.ccml  decls1.ccml  decls2.ccml  (+91 more)
tests/xpass/: args1.ccml  array1.ccml  array2.ccml  array3.ccml  array4.ccml  array5.ccml  array6.ccml  array_init_1.ccml  array_init_2.ccml  array_null.ccml  compare.ccml  complex.ccml  complex1.ccml  complex2.ccml  complex3.ccml  complex5.ccml  complex6.ccml  complex7.ccml  const1.ccml  const10.ccml  const11.ccml  const12.ccml  const2.ccml  const4.ccml  const5.ccml  const6.ccml  const7.ccml  const8.ccml  const9.ccml  cyclic_import.ccml  day_of_the_week.ccml  expr.ccml  fib9.ccml  float1.ccml  float2.ccml  for1.ccml  for2.ccml  for3.ccml  func1.ccml  funcptr1.ccml  (+47 more)
